add Swagger dependencies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,3 +25,7 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
+
+#OpenAPI
+springdoc.swagger-ui.path=/demo_server.html
+springdoc.swagger-ui.operationsSorter=method
